--- a/staticFiles/test.css
+++ b/staticFiles/test.css
@@ -113,18 +113,19 @@ th {
     background-color: #f7f7f7;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 262px;
+    margin-right: 215px;
 }
 
 .box-text .legend-box {
     flex: 1;
-    margin-right: 20px;
+    margin-right: 2px;
 }
 
 .box-text .highlighted-text {
     flex: 1;
     align-items: right;
+    margin-left: 5px;
 }
 
 /* Footer */
@@ -143,4 +144,17 @@ body {
 
 .content {
     flex: 1;
+}
+
+.buttonload {
+    background-color: #0dcaf0; /* Green background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px /* Set a font size */
+}
+
+#highlighted-text {
+    font-family: 'Lato', sans-serif;
+    font-size: large;
 }
