--- a/staticFiles/test.css
+++ b/staticFiles/test.css
@@ -114,7 +114,7 @@ th {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
     margin-left: 262px;
-    margin-right: 215px;
+    margin-right: 214px;
 }
 
 .box-text .legend-box {
@@ -157,4 +157,18 @@ body {
 #highlighted-text {
     font-family: 'Lato', sans-serif;
     font-size: large;
+}
+
+.progress-bar {
+    width: 100%;
+    height: 20px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+}
+
+.progress {
+    height: 100%;
+    background-color: #0dcaf0;
+    border-radius: 5px;
+    transition: width 2s ease-in-out;
 }
