--- a/staticFiles/test.css
+++ b/staticFiles/test.css
@@ -4,14 +4,12 @@
     border-radius: 5px;
     background-color: #f7f7f7;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
 }
 
 .container {
     padding-top: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
     margin: 50px 0;
 }
 
@@ -23,7 +21,7 @@
 
 .left-element,
 .right-element {
-    padding-left: 250px;
+    padding-left: 214px;
 }
 
 /* Description */
@@ -48,10 +46,6 @@
     padding-bottom: 10px;
 }
 
-.left-element textarea {
-    margin-bottom: 5px;
-}
-
 .left-element .btn {
     margin: 10px auto;
     display: block;
@@ -64,10 +58,10 @@ input[type='text'] {
 /* Right Element CSS */
 .right-element {
     flex: 1;
-    padding-left: 60px;
+    padding-left: 20px;
 }
 
-/* styles.css */
+/* Legend */
 table {
     width: 100%;
     border-collapse: collapse;
@@ -84,25 +78,6 @@ th {
     background-color: #f7f7f7;
 }
 
-/* Legend Box Table Styling */
-.legend-box table {
-    width: 5%;
-    border-collapse: collapse;
-    margin-top: 10px;
-}
-
-.legend-box th,
-.legend-box td {
-    padding: 5px;
-    text-align: left;
-    border-bottom: 1px solid #ccc;
-}
-
-.legend-box th {
-    background-color: #f7f7f7;
-}
-
-/* Highlighting Area */
 .box-text {
     display: flex;
     justify-content: space-between;
@@ -113,39 +88,16 @@ th {
     background-color: #f7f7f7;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    margin-left: 262px;
-    margin-right: 214px;
 }
 
-.box-text .legend-box {
-    flex: 1;
-    margin-right: 2px;
-}
-
-.box-text .highlighted-text {
-    flex: 1;
-    align-items: right;
-    margin-left: 5px;
-}
-
-/* Highlighting Area */
-.rewrite-text-box {
+.text-highlight {
+    background: #ff9aff;
+    height: 32px;
+    width: 135px;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: #f7f7f7;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    margin-left: 262px;
-    margin-right: 214px;
-}
-
-#rewritten-text {
-    font-family: 'Lato', sans-serif;
-    font-size: large;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
 }
 
 /* Footer */
@@ -166,19 +118,16 @@ body {
     flex: 1;
 }
 
+/* Button */
 .buttonload {
-    background-color: #0dcaf0; /* Green background */
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
-    font-size: 16px /* Set a font size */
+    background-color: #0dcaf0;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 16px
 }
 
-#highlighted-text {
-    font-family: 'Lato', sans-serif;
-    font-size: large;
-}
-
+/* Progress bar */
 .progress-bar {
     width: 100%;
     height: 20px;
@@ -191,4 +140,147 @@ body {
     background-color: #0dcaf0;
     border-radius: 5px;
     transition: width 2s ease-in-out;
+}
+
+tr td {
+    border-radius: 10px;
+}
+
+tr td:hover {
+    background-color: #21C9D4;
+    cursor: pointer;
+}
+
+/* Highlighting Area */
+.highlight-text-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #f7f7f7;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+#highlighted-text {
+    font-family: 'Lato', sans-serif;
+    font-size: large;
+}
+
+/* Rewrite Area */
+.rewrite-text-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #f7f7f7;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+#rewritten-text {
+    font-family: 'Lato', sans-serif;
+    font-size: large;
+}
+
+.highlight p {
+    cursor: pointer;
+}
+
+#emailForm textarea {
+    border: 1px solid rgb(168, 167, 167);
+    border-radius: 10px;
+}
+
+.highlight-texts {
+    padding-left: 224px;
+    padding-right: 195px;
+}
+
+.wrapper {
+    background: white;
+    border-radius: 30px;
+    height: 509px;
+    width: 920px;
+    display: grid;
+    grid-template-columns: 400px 1fr;
+    grid-gap: 6rem;
+    background-image: url(/images/bg-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: 1260% 65%;
+}
+
+.question-answer__accordion>.answer {
+    display: none;
+}
+
+.active>.answer {
+    display: block;
+    padding-bottom: 1.3rem;
+    color: var(--darkGrayBlue);
+}
+
+.active img {
+    transform: rotate(180deg);
+    transition: all 0.3s ease-in;
+}
+
+.accordion__wrapper {
+    margin-top: 65px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.questions__accordions {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.question-answer__accordion {
+    width: 100%;
+    border-bottom: 1px solid #e8e8ea;
+}
+
+.title__accordion {
+    font-size: 3rem;
+    margin-top: 0px;
+}
+
+.title__question {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: (var(--veryDarkGrayBlue));
+    margin: 1.4rem 0rem;
+}
+
+.question {
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.active h3 {
+    font-weight: 700;
+}
+
+.question img {
+    align-self: center;
+}
+
+.image__wrapper {
+    position: relative;
+}
+
+.image__wrapper_inner {
+    background: url(/images/illustration-woman-online-desktop.svg);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: 120% center;
 }
